--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <h5>Thorax</h5>
     <h6>Prothorax</h6>
 
-    <!-- <h1>chamikara</h1> -->
+    <h1>chamikara</h1>
     <!-- <h2>acpt</h2>
     <h3>afsd</h3> -->
 
