--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 
     <h1>chamikara</h1>
     <h1>Ruchiranga</h1>
-    <!-- <h2>acpt</h2>
-    <h3>afsd</h3> -->
+    <h2>acpt</h2>
+    <!--  <h3>afsd</h3> -->
 
     <!-- anchor tag -->
     <a href="https://acpt.lk/">go to ACPT</a>
