--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 
     <h1>chamikara</h1>
     <h1>Ruchiranga</h1>
+    <h1>Panadura, Thalpitiya</h1>
     <!-- <h2>acpt</h2>
     <h3>afsd</h3> -->
 
