--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <a href="Animation/index.html"><h2>Animation</h2></a>
     <a href="Bootstrap/index.html"><h2>Bootstrap</h2></a>
     <a href="TailwindCSS/index.html"><h2>Tailwind</h2></a>
+    <a href="JavaScript/index.html"><h2>Java Script</h2></a>
     
     <!-- h tag -->
     
