--- a/JavaScript/index.html
+++ b/JavaScript/index.html
@@ -10,9 +10,22 @@
     
 
     <!-- Internal js -->
-    <script type="text/javaScript">
+    <!-- <script type="text/javaScript">
         console.log("Chamikara Ruchiranga")
-    </script>
+    </script> -->
+
+    <button type="button" onclick="clickMe()">Click other</button>
+
+    <br><br><br>
+
+    <input id="change-text" type="text" onchange="onChangeText()">
+    <h1 id="onChange-view"></h1>
+
+    <br><br>
+
+    <div id="mouse-view" onmouseover="mouseOver()" onmouseout="mouseOut()" style="width: 200px; height: 200px; background-color: blue;"></div>
+
+    <!-- <hr> -->
 
     <!-- External Js  -->
     <script type="text/javascript" src="index.js"></script>
