--- a/JavaScript/index.html
+++ b/JavaScript/index.html
@@ -25,6 +25,16 @@
 
     <div id="mouse-view" onmouseover="mouseOver()" onmouseout="mouseOut()" style="width: 200px; height: 200px; background-color: blue;"></div>
 
+    <br><br>
+
+    <input id="keyId" type="text" onkeydown="keyDown()" onkeyup="keyUp()" onkeypress="keyPress()">
+
+    <h1 id="onKey-view"></h1>
+
+    <input id="keyId" type="text" onkeydown="keyDown()" onkeyup="keyUp()" onkeypress="keyPress()">
+
+    <h1 id="onKey-view">Chamikara</h1>
+
     <!-- <hr> -->
 
     <!-- External Js  -->
