--- a/Events/index.html
+++ b/Events/index.html
@@ -56,6 +56,73 @@
         </div>
     </div>
 
+    <h2>5</h2>
+    <div class="card w-50 m-2 p-2">
+        <div>
+            <input type="number" class="form-control mb-1" id="input-8" placeholder="Input Marks">
+            <h3 class="text-center m-2" id="display-5"></h3>
+            <div class="d-flex justify-content-center">
+                <button onclick="enterMarks()" type="button" class="btn btn-primary w-25 m-2">Submit</button>
+            </div>
+        </div>
+      </div>
+
+      <!-- input short name  -->
+      <!-- intern => Intern S E  -->
+      <!-- ase => Associate S E  -->
+      <!-- se => S E  -->
+      <!-- sse => Senior S E  -->
+      <!-- atl => Assistant Tech Lead  -->
+      <!-- tl => Tech Lead -->
+      <!-- Error Key Word  -->
+
+      <h2>6</h2>
+    <div class="card w-50 m-2 p-2">
+        <div>
+            <input type="text" class="form-control mb-1" id="input-9" placeholder="Input Key word">
+            <h3 class="text-center m-2" id="display-6"></h3>
+            <div class="d-flex justify-content-center">
+                <button onclick="keySubmit()" type="button" class="btn btn-primary w-25 m-2">Submit</button>
+            </div>
+        </div>
+      </div>
+
+      <!-- uName = AdMiN -->
+      <!-- uPass = admin1234 -->
+      <!-- input User name and Password -->
+      <!-- display Login Success..!  -->
+      <!-- display Login Fail..!  -->
+
+      <h2>7</h2>
+    <div class="card w-50 m-2 p-2">
+        <div>
+            <input type="text" class="form-control mb-1" id="test-10" placeholder="Input User Name">
+            <input type="password" onkeydown="enterLogin(event)" class="form-control mb-1" id="test-11" placeholder="Input Password">
+            <h3 class="text-center m-2" id="display-7"></h3>
+            <div class="d-flex justify-content-center">
+                <button onclick="login()" type="button" class="btn btn-primary w-25 m-2">login</button>
+            </div>
+        </div>
+      </div>
+    
+      <!-- enter number => Enter key > array save  -->
+      <!-- print array  -->
+
+      <h2>8</h2>
+    <div class="card w-50 m-2 p-2">
+        <div>
+            <input type="number" onkeydown="arrayPush(event)" class="form-control mb-1" id="test-12" placeholder="Input Number">
+            <h3 class="text-center m-2" id="display-8"></h3>
+            <div class="d-flex justify-content-center">
+                <button onclick="arrayPrint()" type="button" class="btn btn-primary w-25 m-2">Print</button>
+            </div>
+        </div>
+      </div>
+
+      <!-- 1 -100 random numbers 50 => array stor  [9, 10, 50, 99, 68]--> 
+      <!-- user input number 1 -100  2--> 
+      <!-- display  [10, 50, 68]--> 
+      <!-- submit =>  -->-+
 
     <script type="text/javascript" src="index.js"></script>
 </body>
