--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     <a href="TailwindCSS/index.html"><h2>Tailwind</h2></a>
     <a href="JavaScript/index.html"><h2>Java Script</h2></a>
     <a href="Events/index.html"><h2>Event</h2></a>
+    <a href="Jquery/index.html"><h2>Jquery</h2></a>
+    <a href="Fetch/index.html"><h2>Fetch</h2></a>
     
     <!-- h tag -->
     
